media-tools/hydra/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hydra
  namespace: media-tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hydra
  template:
    metadata:
      labels:
        app: hydra
        name: hydra
    spec:
      restartPolicy: Always
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: server-type
                operator: In
                values:
                - nuc
      containers:
      - name: hydra
        image: linuxserver/nzbhydra2:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 500Mi
        livenessProbe:
          httpGet:
            path: /
            port: 5076
          initialDelaySeconds: 15
          periodSeconds: 120
        volumeMounts:
        - name: hydra
          mountPath: /config
      volumes:
        - name: hydra
          persistentVolumeClaim:
            claimName: longhorn-hydra-pvc
      automountServiceAccountToken: false
