media-tools/hydra/ingress.yaml
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: hydra
  namespace: media-tools
spec:
  entryPoints: 
    - websecure
  routes:
  - match: Host(`hydra.ucdialplans.com`) 
    kind: Rule
    services:
    - name: hydra-service
      port: 5076
    middlewares:
    - name: traefik-security
      namespace: traefik
  tls:
    secretName: traefik-wildcard-cert
    options:
      name: tls-options-clientauth
      namespace: traefik
